--- a/src/app/sass/navstyle.scss
+++ b/src/app/sass/navstyle.scss
@@ -3,16 +3,11 @@
    justify-content: center;
    padding-top: 20px;
     &-child{
-
         display: flex;
-        padding: 10px;
+        padding: 10px 20px;
         gap: 30px;
-        border-color: white;
-        border-width: 1px;
-        border-radius: 10px;
-        width: 25%;
-        justify-content: center;
-        
+        width: max-content;
+        justify-content: center;   
     }
     &-h1{
         color: white;
