--- a/src/app/sass/herosection.scss
+++ b/src/app/sass/herosection.scss
@@ -14,7 +14,9 @@
     align-items: center;
     padding: 50px;
     padding-top: 350px;
-    gap: 80px;
+    gap: 100px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
 
 }
 
@@ -28,6 +30,8 @@
     padding: 12px;
     text-align: center;
     font-size: 18px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
     
     
 
