--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -7,6 +7,11 @@
     border-radius: 20px;
     border-color: #156380;
     border-width: 5px;
+    //align-items: center;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
     &-text{
         font-size: 24px;
