--- a/src/app/sass/clients.scss
+++ b/src/app/sass/clients.scss
@@ -2,20 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    max-height: 100vh;
+    // max-height: 100vh;
     //padding-top: 50px;
-
-
-&-first_text{
     font-size: 200px;
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
-}
-&-second_text{
-    font-size: 200px;
-    color: #09B7BD;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-}
+    line-height: 200px;
+
 }
