--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -1,24 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.container{
+
+.services-main-container{
+    background-image: url("/images/features/gradient-bg.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+}
+
+.services-container{
     background-color: #0D3346;
-    width: 260px;
-    height: 260px;
+    width: 308px;
+    height: 308px;
     border-radius: 20px;
     border-color: #156380;
     border-width: 5px;
     //align-items: center;
-    padding: 50px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     
     &-text{
-        font-size: 24px;
+        font-size: 36px;
+        line-height: 54px;
         color: white;
         text-align: center;
-        font-weight: 600;
+        font-weight: 500;
         font-family: "Poppins", sans-serif;
+    }
+
+    & > img{
+        max-width: 150px;
+        height: auto;
+        margin: auto;
     }
    
 }
