--- a/src/app/sass/navstyle.scss
+++ b/src/app/sass/navstyle.scss
@@ -2,6 +2,11 @@
    display:flex;
    justify-content: center;
    padding-top: 20px;
+   position: absolute;
+   top: 0;
+   transform: translate(-50%);
+   left: 50%;
+   z-index: 1000;
     &-child{
         display: flex;
         padding: 10px 20px;
