--- a/src/app/sass/main.scss
+++ b/src/app/sass/main.scss
@@ -1,11 +1,11 @@
 $color-primary : #09D1D5;
 $color-secondary : #030516;
 
-.border{
-    &-rounded{
-        &-white{
-            border: 1px solid white;
-            border-radius: 50px;
-        }
-    }
-}
+// .border{
+//     &-rounded{
+//         &-white{
+//             border: 1px solid white;
+//             border-radius: 50px;
+//         }
+//     }
+// }
