--- a/src/app/sass/herosection.scss
+++ b/src/app/sass/herosection.scss
@@ -1,5 +1,7 @@
-.main_image{
-    background-image: url("/images/hero/mainbackgroundimage-modified.png"), linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+$button-primary : #09D1D5;
+
+.main_image {
+    background-image: url("/images/hero/mainbackgroundimage-modified.png"), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -7,20 +9,22 @@
     background-blend-mode: multiply;
     // filter: invert(100%);
 }
-.main_text{
+
+.main_text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    padding-top: 350px;
+    padding: 25px;
+    padding-top: 320px;
     gap: 100px;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
 
 }
 
-.explore_btn{
+.explore_btn {
+    border: none;
     background: linear-gradient(to right, #13FCFF 0%, #056D6F 100%);
     height: -2px;
     width: 250px;
@@ -33,7 +37,24 @@
     font-family: "Poppins", sans-serif;
     font-weight: 600;
 }
-.explore_btn:hover{
-    background-color: #056D6F;
-    text-align: left;
+
+.explore_btn:hover {
+    box-shadow: inset 10px 10px #087071;
+    transition: all 0.3s ease-in-out;
+    // text-align: left;
 }
+
+.explore_btn:hover::after {
+    content: "↗";
+    margin-left: 20px;
+    margin-top: 20px;
+    font-weight: 900;
+    font-size: 55px;
+    transition: all 0.4s ease-in-out;
+    opacity: 1;
+}
+.explore_btn::after {
+    content: ""; 
+    opacity: 0;
+    transition: all 0.4s ease-in-out; 
+  }
