--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -1,46 +1,181 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "./main.scss";
+
+.Services {
+    // border: 2px solid white;
+    font-size: 100px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    padding: 90px;
+    margin-bottom: 30px;
+}
 
 
-.services-main-container{
+.our-services {
     background-image: url("/images/features/gradient-bg.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
-}
 
-.services-container{
-    background-color: rgba(255, 253, 253, 0.101);
-    width: 308px;
-    height: 308px;
-    border-radius: 20px;
-    border-color: rgba(255, 255, 255, 0.202);
-    border-width: 5px;
-    //align-items: center;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &:hover{
-        background-color: #0D3346;
-        border-color: #156380 ;
+    .services-container {
+        display: grid;
+        height: 70%;
+        width: 95%;
+        justify-self: center;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 2.4fr 0.2fr 2fr 1.2fr 1.5fr;
+        grid-column-gap: 16px;
+        grid-row-gap: 16px;
     }
-    
-    &-text{
-        font-size: 36px;
-        line-height: 54px;
-        color: white;
+
+    // .service-card {
+    //     &-1 {
+    //         grid-area: 1 / 1 / 4 / 2;
+    //     }
+
+    //     &-2 {
+    //         grid-area: 4 / 1 / 5 / 2;
+    //     }
+
+    //     &-3 {
+    //         grid-area: 2 / 2 / 5 / 3;
+    //     }
+
+    //     &-4 {
+    //         grid-area: 1 / 2 / 2 / 3;
+    //     }
+
+    //     &-5 {
+    //         grid-area: 1 / 3 / 2 / 4;
+    //     }
+
+    //     &-6 {
+    //         grid-area: 2 / 3 / 4 / 4;
+    //     }
+
+    //     &-7 {
+    //         grid-area: 4 / 3 / 5 / 4;
+    //     }
+    // }
+
+    .service-card {
+        border: 3px solid whitesmoke;
+        background-color: #968e8e2d;
+        backdrop-filter: blur(100);
         text-align: center;
-        font-weight: 500;
-        font-family: "Poppins", sans-serif;
-    }
+        border-radius: 15px;
+        padding: 1rem;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s, box-shadow 0.3s;
 
-    & > img{
-        max-width: 150px;
-        height: auto;
-        margin: auto;
+        &-0 {
+            grid-area: 1 / 1 / 4 / 2;
+        }
+
+        &-1 {
+            grid-area: 4 / 1 / 6 / 2;
+        }
+
+        &-2 {
+            grid-area: 1 / 2 / 3 / 3;
+        }
+
+        &-3 {
+            grid-area: 3 / 2 / 6 / 3;
+        }
+
+        &-4 {
+            grid-area: 1 / 3 / 2 / 4;
+        }
+
+        &-5 {
+            grid-area: 2 / 3 / 4 / 4;
+        }
+
+        &-6 {
+            grid-area: 4 / 3 / 6 / 4;
+        }
+
+        &:hover {
+            transition: 200ms;
+            background-color: #0D3346;
+            border-color: #156380;
+        }
+
+        .icon {
+            font-size: 2.5rem;
+            color: $color-primary;
+            margin-bottom: 0.5rem;
+        }
+
+        h3 {
+            font-size: 1.25rem;
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            font-size: 0.9rem;
+            color: lighten($color-secondary, 20%);
+        }
     }
-   
 }
+
+
+// .Services{
+//     // border: 2px solid white;
+//     font-size: 100px;
+//     font-weight: bolder;
+//     display: flex;
+//     justify-content: center;
+//     padding: 90px;
+//     margin-bottom: 30px;
+// }
+
+
+// .services-main-container{
+//     background-image: url("/images/features/gradient-bg.png");
+//     background-size: contain;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     width: 100%;
+//     height: 100vh;
+// }
+
+
+// .services-container{
+//     background-color: rgba(255, 253, 253, 0.101);
+//     width: 308px;
+//     height: 308px;
+//     border-radius: 20px;
+//     border-color: rgba(255, 255, 255, 0.202);
+//     border-width: 5px;
+//     //align-items: center;
+//     padding: 30px;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+
+//     &:hover{
+//         background-color: #0D3346;
+//         border-color: #156380 ;
+//     }
+
+//     &-text{
+//         font-size: 36px;
+//         line-height: 54px;
+//         color: white;
+//         text-align: center;
+//         font-weight: 500;
+//         font-family: "Poppins", sans-serif;
+//     }
+
+//     & > img{
+//         max-width: 150px;
+//         height: auto;
+//         margin: auto;
+//     }
+
+// }
