update typography and fixes texts

--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -7,7 +7,7 @@
     font-weight: bolder;
     display: flex;
     justify-content: center;
-    padding: 90px;
+    // padding: 90px;
     margin-bottom: 30px;
 }
 
