font fixes and our client section fixes

--- a/src/app/sass/base/typography.scss
+++ b/src/app/sass/base/typography.scss
@@ -1,11 +1,13 @@
 .h1, h1{
     font-size: 108px;
     line-height: 137px;
+    font-weight: 900;
 }
 
 .h2, h2{
     font-size: 86px;
     line-height: 129px;
+    font-weight: bolder;
 }
 
 .h3, h3{
