--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -2,12 +2,9 @@
 @import "./main.scss";
 
 .Services {
-    // border: 2px solid white;
-    font-size: 100px;
-    font-weight: bolder;
+
     display: flex;
     justify-content: center;
-    // padding: 90px;
     margin-bottom: 30px;
 }
 
@@ -18,7 +15,7 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
 
     .services-container {
         display: grid;
