--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -2,7 +2,6 @@
 @import "./main.scss";
 
 .Services {
-    // border: 2px solid white;
     font-size: 100px;
     font-weight: bolder;
     display: flex;
@@ -30,36 +29,6 @@
         grid-column-gap: 16px;
         grid-row-gap: 16px;
     }
-
-    // .service-card {
-    //     &-1 {
-    //         grid-area: 1 / 1 / 4 / 2;
-    //     }
-
-    //     &-2 {
-    //         grid-area: 4 / 1 / 5 / 2;
-    //     }
-
-    //     &-3 {
-    //         grid-area: 2 / 2 / 5 / 3;
-    //     }
-
-    //     &-4 {
-    //         grid-area: 1 / 2 / 2 / 3;
-    //     }
-
-    //     &-5 {
-    //         grid-area: 1 / 3 / 2 / 4;
-    //     }
-
-    //     &-6 {
-    //         grid-area: 2 / 3 / 4 / 4;
-    //     }
-
-    //     &-7 {
-    //         grid-area: 4 / 3 / 5 / 4;
-    //     }
-    // }
 
     .service-card {
         border: 3px solid whitesmoke;
@@ -100,82 +69,20 @@
         }
 
         &:hover {
-            transition: 200ms;
-            background-color: #0D3346;
-            border-color: #156380;
+            transition: 200ms ease;
+            background-color: red;
+            transform: scaleY(1.2);
+            transform-origin: top;
         }
 
-        .icon {
-            font-size: 2.5rem;
-            color: $color-primary;
-            margin-bottom: 0.5rem;
+        .image {
+            margin-bottom: 60px;
+            font-size: 50px;
         }
 
         h3 {
-            font-size: 1.25rem;
-            margin-bottom: 0.5rem;
-        }
-
-        p {
-            font-size: 0.9rem;
-            color: lighten($color-secondary, 20%);
+            font-size: 30px;
+            color: white;
         }
     }
 }
-
-
-// .Services{
-//     // border: 2px solid white;
-//     font-size: 100px;
-//     font-weight: bolder;
-//     display: flex;
-//     justify-content: center;
-//     padding: 90px;
-//     margin-bottom: 30px;
-// }
-
-
-// .services-main-container{
-//     background-image: url("/images/features/gradient-bg.png");
-//     background-size: contain;
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     width: 100%;
-//     height: 100vh;
-// }
-
-
-// .services-container{
-//     background-color: rgba(255, 253, 253, 0.101);
-//     width: 308px;
-//     height: 308px;
-//     border-radius: 20px;
-//     border-color: rgba(255, 255, 255, 0.202);
-//     border-width: 5px;
-//     //align-items: center;
-//     padding: 30px;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-
-//     &:hover{
-//         background-color: #0D3346;
-//         border-color: #156380 ;
-//     }
-
-//     &-text{
-//         font-size: 36px;
-//         line-height: 54px;
-//         color: white;
-//         text-align: center;
-//         font-weight: 500;
-//         font-family: "Poppins", sans-serif;
-//     }
-
-//     & > img{
-//         max-width: 150px;
-//         height: auto;
-//         margin: auto;
-//     }
-
-// }
