--- a/src/app/sass/herosection.scss
+++ b/src/app/sass/herosection.scss
@@ -2,10 +2,11 @@ $button-primary : #09D1D5;
 
 .main_image {
     background-image: url("/images/hero/mainbackgroundimage-modified.png"), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100vh;
-    background-blend-mode: multiply;
+    // height: 100vh;
+    // background-blend-mode: multiply;
 }
 
 .main_text {
