--- a/src/app/sass/herosection.scss
+++ b/src/app/sass/herosection.scss
@@ -5,8 +5,8 @@ $button-primary : #09D1D5;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    // height: 100vh;
-    // background-blend-mode: multiply;
+    height: 100vh;
+    background-blend-mode: multiply;
 }
 
 .main_text {
