--- a/src/app/sass/herosection.scss
+++ b/src/app/sass/herosection.scss
@@ -6,7 +6,7 @@ $button-primary : #09D1D5;
     background-size: cover;
     width: 100%;
     // height: 100vh;
-    // background-blend-mode: multiply;
+    background-blend-mode: multiply;
 }
 
 .main_text {
