See More added with animations.

--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -16,11 +16,10 @@
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    // height: 100vh;
+    height: 100vh;
 
     .services-container {
         display: grid;
-        height: 70%;
         width: 95%;
         justify-self: center;
         grid-template-columns: repeat(3, 1fr);
@@ -66,20 +65,25 @@
         &-6 {
             grid-area: 4 / 3 / 6 / 4;
         }
-
+        
+        // .service-card{
+        // }
+        // &:not(:hover){
+        //     transform: scale(0.7);
+        //     transition: all 0.5s ease;
+        // }
         &:hover {
             cursor: pointer;
-            transition: 0.5s ease;
-            background-color: rgb(60, 104, 104);
+            transition:all  0.5s ease;
+            // background-color: rgb(60, 104, 104);
             transform: scaleY(1.2);
-            transform-origin: top;
+            // transform-origin: ;
+        }
+        &:hover::after{
+            transform: scaleY(calc(1/1.2));
+            transition: all 0.5s ease;
         }
 
-        &:hover::after{
-            content: "See More";
-            transform: scaleY(calc(1/1.2));
-            transition: 0.5s ease-out;
-        }
         
         .image {
             margin-bottom: 60px;
@@ -90,9 +94,16 @@
             font-size: 30px;
             color: white;
         }
-
+        
+        .btn-see-more > div {
+            display: flex;
+            align-items: center;
+            visibility: hidden;
+            font-size: 30px;
+        }   
     }
-    .service-card:hover > .image, .service-card:hover > h3 {
+    .service-card:hover > .image, .service-card:hover > h3, .service-card:hover > .btn-see-more > div {
+        visibility: visible;
         transform: scaleY(calc(1/1.2));
     }
 
