--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -11,10 +11,14 @@
 
 
 .our-services {
-    background: radial-gradient(#3FB59D 60%, #6145DB 80%);
-    filter: blur(100);
-    background-size: cover;
-    background-repeat: no-repeat;
+    .blob {
+        height: 500px;
+        width: 700px;
+        position: absolute;
+        background: radial-gradient(circle, #3FB59D 50%, #6145DB 30%);
+        filter:blur(61px);
+        clip-path: path("M335.5,0C412.2,22.9,486.1,69.5,509,140.5C531.9,211.5,503,307.9,427.6,356.2C352.1,404.5,230.2,404.5,141.2,363.8C52.2,323.1,-3.1,241.7,0.4,161.4C4,81.2,65.4,2.9,146.7,-4.5C228.1,-11.8,258.7,-22.9,335.5,0Z");
+    }
 
     .services-container {
         display: grid;
@@ -28,20 +32,17 @@
 
     .service-card {
         border: 3px solid whitesmoke;
-        background-color: #968e8e62;
+        background-color: #968e8e23;
         backdrop-filter: blur(100);
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
-        
         border-radius: 15px;
         padding: 1rem;
         transform: scale(1);
         transition: all 0.5s ease;
-        // box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        // transition: transform 0.3s, box-shadow 0.3s;
 
         &-0 {
             grid-area: 1 / 1 / 4 / 2;
@@ -70,35 +71,38 @@
         &-6 {
             grid-area: 4 / 3 / 6 / 4;
         }
-        
+
         &:hover {
             cursor: pointer;
-            transition:all  0.5s ease;
+            transition: all 0.5s ease;
             // background-color: rgb(60, 104, 104);
             transform: scale(0.9);
             transform-origin: center;
         }
-        
+
         h3 {
             font-size: 40px;
             color: white;
         }
-        
-        .btn-see-more > div {
+
+        .btn-see-more>div {
             display: flex;
             align-items: center;
             opacity: 0;
             transition: 0.3s ease-in-out;
             font-size: 30px;
-        }   
-        
-    }
-    
-    .service-image{
-       display: inline-flex;
+        }
+
     }
 
-    .service-card:hover > .image, .service-card:hover > h3, .service-card:hover > .btn-see-more > div, .service-card:hover > .service-image {
+    .service-image {
+        display: inline-flex;
+    }
+
+    .service-card:hover>.image,
+    .service-card:hover>h3,
+    .service-card:hover>.btn-see-more>div,
+    .service-card:hover>.service-image {
         transition: 0.3s ease-in-out;
         opacity: 1;
     }
