--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -11,18 +11,12 @@
 
 
 .our-services {
-    .blob {
-        height: 500px;
-        width: 700px;
-        position: absolute;
-        background: radial-gradient(circle, #3FB59D 50%, #6145DB 30%);
-        filter:blur(61px);
-        clip-path: path("M335.5,0C412.2,22.9,486.1,69.5,509,140.5C531.9,211.5,503,307.9,427.6,356.2C352.1,404.5,230.2,404.5,141.2,363.8C52.2,323.1,-3.1,241.7,0.4,161.4C4,81.2,65.4,2.9,146.7,-4.5C228.1,-11.8,258.7,-22.9,335.5,0Z");
-    }
-
     .services-container {
+        // background: radial-gradient(circle, #3fb59d88 0%, #6145db21 32%, #03051600 50%);
+        overflow: visible;
+        transition: 0.5s ease;
         display: grid;
-        width: 95%;
+        width: 90%;
         justify-self: center;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 2.4fr 0.2fr 2fr 1.2fr 1.5fr;
@@ -31,7 +25,7 @@
     }
 
     .service-card {
-        border: 3px solid whitesmoke;
+        border: 3px solid #968e8e7c;
         background-color: #968e8e23;
         backdrop-filter: blur(100);
         display: flex;
