--- a/src/app/sass/features.scss
+++ b/src/app/sass/features.scss
@@ -1,3 +1,5 @@
+// Styling for service section and grid styling
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "./main.scss";
 
@@ -12,7 +14,6 @@
 
 .our-services {
     .services-container {
-        // background: radial-gradient(circle, #3fb59d88 0%, #6145db21 32%, #03051600 50%);
         overflow: visible;
         transition: 0.5s ease;
         display: grid;
@@ -69,7 +70,6 @@
         &:hover {
             cursor: pointer;
             transition: all 0.5s ease;
-            // background-color: rgb(60, 104, 104);
             transform: scale(0.9);
             transform-origin: center;
         }
